third_party/move/move-compiler-v2/tests/checking/typing/constant_internal.exp

Diagnostics:
error: constant `0x2::X::C` cannot be used here because it is private to the module `0x2::X`
   ┌─ tests/checking/typing/constant_internal.move:10:9
   │
10 │         X::C;
   │         ^^^^

error: constant `0x2::X::C` cannot be used here because it is private to the module `0x2::X`
   ┌─ tests/checking/typing/constant_internal.move:11:9
   │
11 │         C;
   │         ^
